test/scc/expr/semantic-errors/128.t
void test()
{
    char* a;
    int* b = { a };
}